--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
         <section class="hero">
           <h1>Optimalkan Rutin Skincare Anda</h1>
           <p>
-            Gunakan pendekatan matematis untuk menjadwalkan pemakaian bahan
-            aktif dan memahami potensi efeknya pada kulit Anda.
+            “Perbaiki kondisi kulitmu dengan menggunakan penjadwalan teratur dalam pemakaian skincare bahan aktif yang digunakan”
           </p>
           <a
             href="planner.html"
