--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <section class="hero">
           <h1>Optimalkan Rutin Skincare Anda</h1>
           <p>
-            “Perbaiki kondisi kulitmu dengan menggunakan penjadwalan teratur dalam pemakaian skincare bahan aktif yang digunakan”
+            Perbaiki kondisi kulitmu dengan menggunakan penjadwalan teratur dalam pemakaian skincare bahan aktif yang digunakan
           </p>
           <a
             href="planner.html"
