--- a/about.html
+++ b/about.html
@@ -191,7 +191,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="js/script.js"></script>
-    <script src="js/liblary_scincar.js"></script>
+    <script src="script.js"></script>
+    <script src="liblary_scincar.js"></script>
   </body>
 </html>
